<resources>
    <string name="app_name">FirstAndroid</string>
    <string name="firstview_widget">Start UI Widget</string>
    <string name="firstview_layout">Start UI Layout</string>
    <string name="firstview_broadcast">Start Broadcast</string>
    <string name="firstview_content">Start ContentResolver</string>
    <string name="firstview_notification">Start Notification</string>
    <string name="firstview_service">Start Service</string>
    <string name="firstview_app">Web activity</string>
    <string name="broadcast_sent">Send broadcast</string>
    <string name="storage_view">Start Storage</string>
    <string name="storage_file">File storage</string>
    <string name="storage_sharedPreference">SharedPreferences</string>
    <string name="storage_sqlite">SQLite Storage</string>
    <string name="storage_type">Type something to save</string>
    <string name="storage_file_save">Save to file</string>
    <string name="storage_file_read">Read from file</string>
    <string name="storage_sql_create">Create database</string>
    <string name="storage_sql_add">add data</string>
    <string name="storage_sql_del">del data</string>
    <string name="storage_sql_upd">update data</string>
    <string name="storage_sql_que">query data</string>
    <string name="notification_sent">Sent notice</string>
    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="service_bind">Bind Service</string>
    <string name="service_unbind">Unbind Service</string>
    <string name="service_intent">Start Intent Service</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
