<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <Button
        android:id="@+id/storage_sql_create"
        android:text="@string/storage_sql_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/storage_sql_textView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"/>

    <Button
        android:id="@+id/storage_sql_que"
        android:text="@string/storage_sql_que"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/storage_sql_add"
        android:text="@string/storage_sql_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/storage_sql_upd"
        android:text="@string/storage_sql_upd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/storage_sql_del"
        android:text="@string/storage_sql_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
