<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wjdev02.service.ServiceActivity">

    <Button
        android:id="@+id/service_start"
        android:text="@string/service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/service_stop"
        android:text="@string/service_stop"
        android:layout_below="@id/service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/service_bind"
        android:text="@string/service_bind"
        android:layout_below="@id/service_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/service_unbind"
        android:text="@string/service_unbind"
        android:layout_below="@id/service_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
