<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/storage_file_edit"
        android:hint="@string/storage_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/storage_file_b_save"
        android:text="@string/storage_file_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/storage_file_b_read"
        android:text="@string/storage_file_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/storage_file_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
